bk_ida/gccida/c2/shorten_branches
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/shorten_branches/src/final.c:1412:4: error: expected ';' after expression
rtx v62; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/shorten_branches/src/final.c:1412:5: error: use of undeclared identifier 'v62'
rtx v62; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/shorten_branches/src/final.c:1434:4: error: expected ';' after expression
rtx v84; // [rsp+18h] [rbp-C0h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/shorten_branches/src/final.c:1434:5: error: use of undeclared identifier 'v84'
rtx v84; // [rsp+18h] [rbp-C0h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/shorten_branches/src/final.c:1437:1: error: use of undeclared identifier 'v84'
v84 = first; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/shorten_branches/src/final.c:1545:20: error: expected expression
uid_align = ( rtx *)xcalloc( v2, 8uLL); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/shorten_branches/src/final.c:1558:22: error: expected expression
v25[rtint] = *( rtx *)&v85[0]; 
                     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/shorten_branches/src/final.c:1562:22: error: expected expression
v25[rtint] = *( rtx *)&v85[0]; 
                     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/shorten_branches/src/final.c:1565:20: error: invalid operands to binary expression ('rtx' (aka 'struct rtx_def *') and 'uint64 *' (aka 'unsigned long long *'))
v25[rtint] = ( rtx)*( ( _QWORD *)v85 + v29); 
             ~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/shorten_branches/src/final.c:1571:26: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'unsigned long long' of different size
v31 = _mm_shuffle_epi32( ( __m128i)( unsigned __int64)last_insn, 68); 
      ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/usr/lib/llvm-7/lib/clang/7.0.0/include/emmintrin.h:4347:52: note: expanded from macro '_mm_shuffle_epi32'
  (__m128i)__builtin_ia32_pshufd((__v4si)(__m128i)(a), (int)(imm))
                                                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/shorten_branches/src/final.c:1605:19: error: expected ';' after expression
last_insn = ( rtx)last_insn[1]; 
                  ^
                  ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/shorten_branches/src/final.c:1627:6: error: use of undeclared identifier 'v84'
if ( v84 ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/shorten_branches/src/final.c:1630:7: error: use of undeclared identifier 'v84'
rtx = v84; 
      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/shorten_branches/src/final.c:1644:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v44 = (  struct rtx_def *)rtx[2]; 
                          ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/shorten_branches/src/final.c:1648:58: error: expected expression
if ( ( _WORD)v45 == 40 || ( v46 = asm_noperands( *( rtx *)&rtx[2]), LOWORD( v45) = *( _WORD *)v44, v46 >= 0) ) 
                                                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/shorten_branches/src/final.c:1687:50: error: expected expression
if ( ( _WORD)v45 == 40 || asm_noperands( *( rtx *)( v52 + 32)) >= 0 ) 
                                                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/shorten_branches/src/final.c:1706:40: error: expected ')'
v59 = v57 * insn_default_length( ( rtx)v52); 
                                       ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/shorten_branches/src/final.c:1706:32: note: to match this '('
v59 = v57 * insn_default_length( ( rtx)v52); 
                               ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/shorten_branches/src/final.c:1713:34: error: expected ')'
v59 = insn_default_length( ( rtx)v52); 
                                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/shorten_branches/src/final.c:1713:26: note: to match this '('
v59 = insn_default_length( ( rtx)v52); 
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/shorten_branches/src/final.c:1745:1: error: use of undeclared identifier 'v62'
v62 = v84; 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/shorten_branches/src/obj/final.o] Error 1
